--- a/TacCoPOP/Base.lproj/Main.storyboard
+++ b/TacCoPOP/Base.lproj/Main.storyboard
@@ -1,26 +1,78 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_0" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--MainVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MainVC" customModule="TacCoPOP" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lvz-tF-Sq8" customClass="HeaderView" customModule="TacCoPOP" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="81"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Taco-POP" translatesAutoresizingMaskIntoConstraints="NO" id="MeF-sO-poN">
+                                        <rect key="frame" x="78" y="10.5" width="165" height="60"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="165" id="Knl-JL-oOs"/>
+                                            <constraint firstAttribute="height" constant="60" id="Mux-hC-nMV"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.80168032646179199" green="0.21610268950462341" blue="0.23621806502342224" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="MeF-sO-poN" firstAttribute="centerX" secondItem="lvz-tF-Sq8" secondAttribute="centerX" id="WY9-vi-TGS"/>
+                                    <constraint firstItem="MeF-sO-poN" firstAttribute="centerY" secondItem="lvz-tF-Sq8" secondAttribute="centerY" id="uCj-AI-LE8"/>
+                                    <constraint firstAttribute="height" constant="81" id="zjc-03-0Tg"/>
+                                </constraints>
+                            </view>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="TuH-m0-TEL">
+                                <rect key="frame" x="16" y="101" width="282" height="447"/>
+                                <color key="backgroundColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="cEl-n5-363">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="TuH-m0-TEL" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="BZ3-zy-pe4"/>
+                            <constraint firstItem="lvz-tF-Sq8" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="E29-xQ-mGv"/>
+                            <constraint firstItem="TuH-m0-TEL" firstAttribute="top" secondItem="lvz-tF-Sq8" secondAttribute="bottom" constant="20" id="NBA-e5-OI6"/>
+                            <constraint firstAttribute="trailing" secondItem="lvz-tF-Sq8" secondAttribute="trailing" id="PWD-ug-64M"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="TuH-m0-TEL" secondAttribute="trailing" constant="6" id="SVA-rh-cXf"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="TuH-m0-TEL" secondAttribute="bottom" constant="20" id="UfG-ir-CDs"/>
+                            <constraint firstItem="lvz-tF-Sq8" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Ymp-8j-lSP"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="headerView" destination="lvz-tF-Sq8" id="RZA-YS-bsD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="93.75" y="147.88732394366198"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Taco-POP" width="490" height="100"/>
+    </resources>
 </document>
